{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 26,
  "lineage": "4b055c9f-ec48-bc52-929e-a3fae8966a28",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ansible",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:730335592222:instance/i-0f85383e4e9a768ea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f85383e4e9a768ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "portf-dev-nvir",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-076388c938cc018e6",
            "private_dns": "ip-10-1-1-154.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.154",
            "public_ip": "52.90.245.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ce4799edb007a77a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b28912ff4894b9f8",
            "tags": {
              "Name": "ansible"
            },
            "tags_all": {
              "Name": "ansible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b7c0994794a8e082"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.dpp-public-subnet-01",
            "aws_vpc.dpp-vpc"
          ]
        },
        {
          "index_key": "build-slave",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:730335592222:instance/i-094d1c590e0803b19",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094d1c590e0803b19",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "portf-dev-nvir",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06fd482e90e0129cb",
            "private_dns": "ip-10-1-1-163.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.163",
            "public_ip": "54.165.233.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-059ee40060800e215",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b28912ff4894b9f8",
            "tags": {
              "Name": "build-slave"
            },
            "tags_all": {
              "Name": "build-slave"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b7c0994794a8e082"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.dpp-public-subnet-01",
            "aws_vpc.dpp-vpc"
          ]
        },
        {
          "index_key": "jenkins-master",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:730335592222:instance/i-072df4786a96d8259",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072df4786a96d8259",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "portf-dev-nvir",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-094b41f9b682bca09",
            "private_dns": "ip-10-1-1-60.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.60",
            "public_ip": "54.147.202.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00b87a8b5994ec462",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b28912ff4894b9f8",
            "tags": {
              "Name": "jenkins-master"
            },
            "tags_all": {
              "Name": "jenkins-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b7c0994794a8e082"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.dpp-public-subnet-01",
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dpp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335592222:internet-gateway/igw-0d91ded64b9889eca",
            "id": "igw-0d91ded64b9889eca",
            "owner_id": "730335592222",
            "tags": {
              "Name": "dpp-igw"
            },
            "tags_all": {
              "Name": "dpp-igw"
            },
            "vpc_id": "vpc-0c875a2f53a7f859b"
          },
          "dependencies": [
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dpp-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335592222:route-table/rtb-00fe9e1f1b064de30",
            "id": "rtb-00fe9e1f1b064de30",
            "owner_id": "730335592222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d91ded64b9889eca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c875a2f53a7f859b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dpp-igw",
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dpp-rta-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b35babc7c8e04473",
            "route_table_id": "rtb-00fe9e1f1b064de30",
            "subnet_id": "subnet-0b28912ff4894b9f8"
          },
          "dependencies": [
            "aws_internet_gateway.dpp-igw",
            "aws_route_table.dpp-public-rt",
            "aws_subnet.dpp-public-subnet-01",
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dpp-rta-public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fb60c4fdd73b046",
            "route_table_id": "rtb-00fe9e1f1b064de30",
            "subnet_id": "subnet-038b4d5c4b4ffef84"
          },
          "dependencies": [
            "aws_internet_gateway.dpp-igw",
            "aws_route_table.dpp-public-rt",
            "aws_subnet.dpp-public-subnet-02",
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335592222:security-group/sg-0b7c0994794a8e082",
            "description": "SSH Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7c0994794a8e082",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins Browser Port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Shh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo-sg",
            "name_prefix": "",
            "owner_id": "730335592222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-port"
            },
            "tags_all": {
              "Name": "ssh-port"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c875a2f53a7f859b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dpp-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335592222:subnet/subnet-0b28912ff4894b9f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b28912ff4894b9f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335592222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dpp-public-subent-01"
            },
            "tags_all": {
              "Name": "dpp-public-subent-01"
            },
            "vpc_id": "vpc-0c875a2f53a7f859b"
          },
          "dependencies": [
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dpp-public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335592222:subnet/subnet-038b4d5c4b4ffef84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038b4d5c4b4ffef84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335592222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dpp-public-subent-02"
            },
            "tags_all": {
              "Name": "dpp-public-subent-02"
            },
            "vpc_id": "vpc-0c875a2f53a7f859b"
          },
          "dependencies": [
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dpp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335592222:vpc/vpc-0c875a2f53a7f859b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-07cb83e911787a4f4",
            "default_route_table_id": "rtb-08c5f56ea92c06d76",
            "default_security_group_id": "sg-0c02bc2d094d3fe71",
            "dhcp_options_id": "dopt-0945715b2d78a26a3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c875a2f53a7f859b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c5f56ea92c06d76",
            "owner_id": "730335592222",
            "tags": {
              "Name": "dpp-vpc"
            },
            "tags_all": {
              "Name": "dpp-vpc"
            }
          }
        }
      ]
    }
  ]
}